RecipeBookBackend/src/main/java/com/example/RecipeBook/errors/CategoryNotFoundException.java
package com.example.RecipeBook.errors;

public class CategoryNotFoundException extends RuntimeException {
    public CategoryNotFoundException() {
        super("Category not found");
    }
}
